// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: loading 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/azure.svg"
        />
        onboarding.create_project.azure.title
      </span>
    }
  />
  <i
    className="spinner"
  />
</Fragment>
`;

exports[`should render correctly: no settings 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/azure.svg"
        />
        onboarding.create_project.azure.title
      </span>
    }
  />
  <WrongBindingCountAlert
    alm="azure"
    canAdmin={true}
  />
</Fragment>
`;

exports[`should render correctly: project list 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/azure.svg"
        />
        onboarding.create_project.azure.title
      </span>
    }
  />
  <AzureProjectsList
    loadingRepositories={Object {}}
    onOpenProject={[MockFunction]}
    projects={
      Array [
        Object {
          "key": "azure-project-1",
          "name": "Azure Project",
        },
      ]
    }
    repositories={
      Object {
        "azure-project-1": Array [
          Object {
            "name": "Azure repo 1",
            "projectName": "Azure Project",
          },
        ],
      }
    }
  />
</Fragment>
`;

exports[`should render correctly: token form 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/azure.svg"
        />
        onboarding.create_project.azure.title
      </span>
    }
  />
  <div
    className="display-flex-justify-center"
  >
    <AzurePersonalAccessTokenForm
      almSetting={
        Object {
          "alm": "azure",
          "key": "key",
        }
      }
      onPersonalAccessTokenCreate={[MockFunction]}
      submitting={false}
      validationFailed={false}
    />
  </div>
</Fragment>
`;
